--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeroTrack - تحميل  الها-كات</title>
+    <title>ZeroTrack - تحميل الهاك-ات</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>مرحبًا بك في ZeroTrack</h1>
-        <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
+        <p>أفضل موقع لتحميل الها-كان بسهولة!</p>
 
         <div class="buttons">
-            <a href="https://example.com/delta-download" class="btn">تحميل Delta</a>
-            <a href="https://example.com/codex-download" class="btn">تحميل Codex</a>
+            <a href="https://deltaios-executor.com" class="btn" target="_blank">تحميل Delta</a>
+            <a href="https://codex-ios.com" class="btn" target="_blank">تحميل Codex</a>
         </div>
 
         <footer>
