--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>مرحبًا بك في ZeroTrack</h1>
-        <p>أفضل موقع لتحميل الها-كان بسهولة!</p>
+        <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
 
         <div class="buttons">
             <a href="https://deltaios-executor.com" class="btn" target="_blank">تحميل Delta</a>
