--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeroTrack - تحميل الهاك-ات</title>
+    <title>ZeroTrack - تحميل الها-كات</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +12,9 @@
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
 
         <div class="buttons">
-            <a href="https://deltaios-executor.com" class="btn" target="_blank">تحميل Delta</a>
-            <a href="https://codex-ios.com" class="btn" target="_blank">تحميل Codex</a>
+            <a href="https://deltaios-executor.com" class="btn btn-delta" target="_blank">تحميل Delta</a>
+            <a href="https://codex-ios.com" class="btn btn-codex" target="_blank">تحميل Codex</a>
+            <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
         </div>
 
         <footer>
