--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
 
         <div class="buttons">
-            <a href="https://deltaios-executor.com" class="btn btn-delta" target="_blank">تحميل Delta</a>
-            <a href="https://codex-ios.com" class="btn btn-codex" target="_blank">تحميل Codex</a>
-            <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
-        </div>
+    <a href="https://example.com/delta.ipa" class="btn btn-delta">تثبيت Delta</a>
+    <a href="https://example.com/codex.ipa" class="btn btn-codex">تثبيت Codex</a>
+    <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
+</div>
 
         <footer>
             <p>&copy; 2025 ZeroTrack</p>
