--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
 
         <div class="buttons">
-    <a href="https://example.com/delta.ipa" class="btn btn-delta">تثبيت Delta</a>
-    <a href="https://example.com/codex.ipa" class="btn btn-codex">تثبيت Codex</a>
+    <a href="https://codex-ios.com/" class="btn btn-codex" target="_blank">تثبيت Codex</a>
+    <a href="https://deltaios-executor.com/" class="btn btn-delta" target="_blank">تثبيت Delta</a>
     <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
 </div>
 
