--- a/index.html
+++ b/index.html
@@ -5,21 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZeroTrack - تحميل الها-كات</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        function openMenu() {
+            document.getElementById("sidebar").classList.toggle("open");
+        }
+
+        function showSection(sectionId) {
+            document.getElementById("roblox").style.display = "none";
+            document.getElementById("fortnite").style.display = "none";
+            document.getElementById(sectionId).style.display = "block";
+            document.getElementById("sidebar").classList.remove("open"); // إغلاق القائمة بعد الاختيار
+        }
+    </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: white;
+            text-align: center;
+        }
+        .menu-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 30px;
+            cursor: pointer;
+            background: none;
+            border: none;
+            color: white;
+        }
+        .sidebar {
+            position: fixed;
+            top: 0;
+            right: -250px;
+            width: 200px;
+            height: 100%;
+            background-color: black;
+            padding-top: 60px;
+            transition: 0.3s;
+        }
+        .sidebar.open {
+            right: 0;
+        }
+        .sidebar a {
+            display: block;
+            padding: 10px;
+            color: white;
+            text-decoration: none;
+            border-bottom: 1px solid gray;
+        }
+        .sidebar a:hover {
+            background-color: gray;
+        }
+        .container {
+            padding: 50px;
+        }
+        .btn {
+            display: block;
+            margin: 10px auto;
+            padding: 10px;
+            width: 200px;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+        .btn-codex { background-color: red; color: white; }
+        .btn-delta { background-color: gray; color: white; }
+        .btn-discord { background-color: blue; color: white; }
+        .btn-download { background-color: lightblue; color: black; }
+        #fortnite {
+            display: none;
+            background-color: darkblue;
+            padding: 50px;
+        }
+        .fortnite-img {
+            width: 200px;
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
+    <button class="menu-btn" onclick="openMenu()">☰</button>
+
+    <div id="sidebar" class="sidebar">
+        <a href="#" onclick="showSection('roblox')">روبلوكس</a>
+        <a href="#" onclick="showSection('fortnite')">فورت نايت</a>
+    </div>
+
+    <div id="roblox" class="container">
         <h1>مرحبًا بك في ZeroTrack</h1>
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
-
-        <div class="buttons">
-    <a href="itms-services://?action=download-manifest&url=https://codex-ios.com/Install.plist" class="btn btn-codex" target="_blank">تثبيت Codex</a>
-    <a href="itms-services://?action=download-manifest&url=https://deltaios-executor.com/Install1.plist" class="btn btn-delta" target="_blank">تثبيت Delta</a>
-    <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
-</div>
-
+        <a href="itms-services://?action=download-manifest&url=https://codex-ios.com/Install.plist" class="btn btn-codex" target="_blank">تثبيت Codex</a>
+        <a href="itms-services://?action=download-manifest&url=https://deltaios-executor.com/Install1.plist" class="btn btn-delta" target="_blank">تثبيت Delta</a>
+        <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
         <footer>
             <p>&copy; 2025 ZeroTrack</p>
         </footer>
+    </div>
+
+    <div id="fortnite">
+        <h1>مرحبًا بك في قسم فورت نايت</h1>
+        <img src="fortnite.jpg" alt="Fortnite" class="fortnite-img">
+        <a href="ضع رابط التحميل هنا" class="btn btn-download" target="_blank">تحميل</a>
     </div>
 </body>
 </html>
