--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     </div>
 
     <div id="fortnite">
-        <h1>مرحبًا بك في قسم فورت نايت</h1>
+        <h1>مرحبًا بك في قسم فورت</h1>
         <img src="fortnite.jpg" alt="Fortnite" class="fortnite-img">
-        <a href="ضع رابط التحميل هنا" class="btn btn-download" target="_blank">تحميل</a>
+        <a href="itms-services://?action=download-manifest&url=https://fortnite-ios.com/Install.plist" class="btn btn-download" target="_blank">تحميل</a>
     </div>
 </body>
 </html>
