--- a/index.html
+++ b/index.html
@@ -17,74 +17,6 @@
             document.getElementById("sidebar").classList.remove("open"); // إغلاق القائمة بعد الاختيار
         }
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: white;
-            text-align: center;
-        }
-        .menu-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 30px;
-            cursor: pointer;
-            background: none;
-            border: none;
-            color: white;
-        }
-        .sidebar {
-            position: fixed;
-            top: 0;
-            right: -250px;
-            width: 200px;
-            height: 100%;
-            background-color: black;
-            padding-top: 60px;
-            transition: 0.3s;
-        }
-        .sidebar.open {
-            right: 0;
-        }
-        .sidebar a {
-            display: block;
-            padding: 10px;
-            color: white;
-            text-decoration: none;
-            border-bottom: 1px solid gray;
-        }
-        .sidebar a:hover {
-            background-color: gray;
-        }
-        .container {
-            padding: 50px;
-        }
-        .btn {
-            display: block;
-            margin: 10px auto;
-            padding: 10px;
-            width: 200px;
-            text-align: center;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        .btn-codex { background-color: red; color: white; }
-        .btn-delta { background-color: gray; color: white; }
-        .btn-discord { background-color: blue; color: white; }
-        .btn-download { background-color: lightblue; color: black; }
-        #fortnite {
-            display: none;
-            background-color: darkblue;
-            padding: 50px;
-        }
-        .fortnite-img {
-            width: 200px;
-            display: block;
-            margin: 20px auto;
-        }
-    </style>
 </head>
 <body>
     <button class="menu-btn" onclick="openMenu()">☰</button>
@@ -97,9 +29,14 @@
     <div id="roblox" class="container">
         <h1>مرحبًا بك في ZeroTrack</h1>
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
-        <a href="itms-services://?action=download-manifest&url=https://codex-ios.com/Install.plist" class="btn btn-codex" target="_blank">تثبيت Codex</a>
-        <a href="itms-services://?action=download-manifest&url=https://deltaios-executor.com/Install1.plist" class="btn btn-delta" target="_blank">تثبيت Delta</a>
+
+        <div class="button-container">
+            <a href="itms-services://?action=download-manifest&url=https://codex-ios.com/Install.plist" class="btn btn-codex" target="_blank">تثبيت Codex</a>
+            <a href="itms-services://?action=download-manifest&url=https://deltaios-executor.com/Install1.plist" class="btn btn-delta" target="_blank">تثبيت Delta</a>
+        </div>
+        
         <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
+
         <footer>
             <p>&copy; 2025 ZeroTrack</p>
         </footer>
