--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
             document.getElementById("roblox").style.display = "none";
             document.getElementById("fortnite").style.display = "none";
             document.getElementById(sectionId).style.display = "block";
-            document.getElementById("sidebar").classList.remove("open"); // إغلاق القائمة بعد الاختيار
+            document.getElementById("sidebar").classList.remove("open");
         }
     </script>
 </head>
 <body>
+    <!-- صورة سيرفر الديسكورد -->
+    <div class="server-banner">
+        <img src="https://i.imgur.com/EV5YiSu.png" alt="سيرفر ZeroTrack">
+    </div>
+
     <button class="menu-btn" onclick="openMenu()">☰</button>
 
     <div id="sidebar" class="sidebar">
@@ -29,22 +34,23 @@
     <div id="roblox" class="container">
         <h1>مرحبًا بك في ZeroTrack</h1>
         <p>أفضل موقع لتحميل الها-كات بسهولة!</p>
-
+        
+        <!-- أزرار Codex و Delta جنبًا إلى جنب -->
         <div class="button-container">
             <a href="itms-services://?action=download-manifest&url=https://codex-ios.com/Install.plist" class="btn btn-codex" target="_blank">تثبيت Codex</a>
             <a href="itms-services://?action=download-manifest&url=https://deltaios-executor.com/Install1.plist" class="btn btn-delta" target="_blank">تثبيت Delta</a>
         </div>
-        
+
         <a href="https://discord.gg/rayrQG8M" class="btn btn-discord" target="_blank">انضم إلى Discord</a>
 
         <footer>
-            <p>&copy; 2025 ZeroTrack</p>
+            <p>&copy;كل الحقوق محفوظه الى 2025 ZeroTrack </p>
         </footer>
     </div>
 
-    <div id="fortnite">
-        <h1>مرحبًا بك في قسم فورت</h1>
-        <img src="fortnite.jpg" alt="Fortnite" class="fortnite-img">
+    <div id="fortnite" class="fortnite-container">
+        <h1> هاذ اقسم لتحميل فورت</h1>
+        <img src="https://i.imgur.com/f5sAmAZ.png" alt="Fortnite" class="fortnite-img">
         <a href="itms-services://?action=download-manifest&url=https://fortnite-ios.com/Install.plist" class="btn btn-download" target="_blank">تحميل</a>
     </div>
 </body>
